--- a/python.yaml
+++ b/python.yaml
@@ -632,8 +632,8 @@
       - '{name}-container-{ubuntu_release}-{os_release}':
          access: 'nobody'
          organisation: 'NeCTAR-RC'
-         ubuntu_release: 'bionic'
-         os_release: 'train'
+         ubuntu_release: 'focal'
+         os_release: 'ussuri'
 
 - project:
     name: python-magnumclient
