Add puppetlabs-docker CI
Change-Id: I86261f0bfd31b14c2d7c76f59fd05c969437ee16

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -578,6 +578,13 @@
          organisation: 'NeCTAR-RC'
 
 - project:
+    name: puppetlabs-docker
+    jobs:
+      - '{name}-puppet-unit':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+
+- project:
     name: puppetlabs-rsync
     jobs:
       - '{name}-puppet-unit':
