--- a/python.yaml
+++ b/python.yaml
@@ -525,14 +525,14 @@
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py36'
-      - '{name}-os-deb-package':
-         access: 'anonymous'
-         organisation: 'NeCTAR-RC'
+         environment: 'flake8'
       - '{name}-os-tox-{environment}':
          access: 'anonymous'
          organisation: 'NeCTAR-RC'
-         environment: 'py35'
+         environment: 'py38'
+      - '{name}-os-deb-package':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
 
 - project:
     name: ceilometer
