Add elasticluster into ci
Change-Id: I2172ee1120aec3f8593dd195e3322f5fd046d11e

--- a/python.yaml
+++ b/python.yaml
@@ -846,6 +846,14 @@
          organisation: 'internal'
 
 - project:
+    name: elasticluster
+    jobs:
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+
+- project:
     name: ospurge
     jobs:
       - '{name}-bionic-tox-{environment}':
