Add network test for intersect
Change-Id: Ic65f912238fdd6eaf6140c90ecf3d8e6acdb0e0d

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1224,6 +1224,7 @@
     name: tempest-nagios-site-network
     site:
         - auckland
+        - intersect-01
         - melbourne-qh2
         - monash-01
         - monash-02
