--- a/tempest.yaml
+++ b/tempest.yaml
@@ -710,6 +710,26 @@
       - 'tempest-nagios-services-{site}-{test}':
           test:
             - 'volume'
+          skip_capacity_check: false
+          environment: 'production'
+
+- project:
+    name: tempest-nagios-services-volume-backup
+    site:
+      - auckland
+      - melbourne-qh2
+      - melbourne-qh2-uom
+      - monash-01
+      - monash-02
+      - monash-03
+      - qld
+      - swinburne-01
+      - tasmania
+      - tasmania-02
+      - tasmania-s
+    jobs:
+      - 'tempest-nagios-services-{site}-{test}':
+          test:
             - 'volume_backup'
           skip_capacity_check: false
           environment: 'production'
