Update cleanup job name for generic tempest service tests
As the tests should be conducted under tempest-operator project

Change-Id: Iffdad382b0d6c8f7a85f794048fc9dbfe89f0d3a

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -1472,7 +1472,7 @@
           max-failed-builds: 2
           fixed-delay: 30
       - trigger:
-          project: 'tempest-cleanup'
+          project: 'tempest-cleanup-operator'
           threshold: 'FAILURE'
 
     properties:
