Update octavia amp image for building
Change-Id: Ice33c81743c78882fcd078d575ce952ac154a7b1

--- a/images.yaml
+++ b/images.yaml
@@ -414,7 +414,7 @@
                 stage('Build Image') {
                     agent { label 'bionic' }
                     steps {
-                        imageBuildQEMU 'octavia-haproxy-ubuntu-18.04-x86_64'
+                        imageBuildQEMU 'octavia-haproxy-ubuntu-x86_64'
                     }
                 }
                 stage('Set Image ID') {
