--- a/tox.yaml
+++ b/tox.yaml
@@ -16,6 +16,9 @@
       - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
             ubuntu_release: 'focal'
             os_release: 'victoria'
+      - '{name}-{ubuntu_release}-{os_release}-tox-{environment}':
+            ubuntu_release: 'focal'
+            os_release: 'wallaby'
 
 # Transition group for Ussuri projects that need to use bionic.
 - job-group:
