--- a/python.yaml
+++ b/python.yaml
@@ -283,6 +283,23 @@
          os_release: 'victoria'
 
 - project:
+    name: cloudkitty
+    jobs:
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'py38'
+      - '{name}-focal-tox-{environment}':
+         access: 'anonymous'
+         organisation: 'NeCTAR-RC'
+         environment: 'pep8'
+      - '{name}-container-{ubuntu_release}-{os_release}':
+         access: 'nobody'
+         organisation: 'NeCTAR-RC'
+         ubuntu_release: 'focal'
+         os_release: 'wallaby'
+
+- project:
     name: cyborg
     jobs:
       - '{name}-focal-tox-{environment}':
