Remove the unsupported tempest for prod
1) monash-03 will not have default_networks config, so remove
heat/murano/trove tests as they will use the default network
2) magnum tempest tests needs rework, so removed for now

Change-Id: Ie0526a70d30d90ac98730b4825988f031caa8cf9

--- a/tempest.yaml
+++ b/tempest.yaml
@@ -722,7 +722,6 @@
       - melbourne-qh2-uom
       - monash-01
       - monash-02
-      - monash-03
       - qld
       - swinburne-01
       - tasmania
@@ -735,6 +734,17 @@
             - 'orchestration'
             - 'database'
             - 'application'
+          skip_capacity_check: false
+          environment: 'production'
+
+- project:
+    name: tempest-nagios-services-volume
+    site:
+      - monash-03
+    jobs:
+      - 'tempest-nagios-services-{site}-{test}':
+          test:
+            - 'volume'
           skip_capacity_check: false
           environment: 'production'
 
@@ -773,7 +783,6 @@
       - 'tempest-nagios-services-{site}-{test}':
           test:
             - 'loadbalancer'
-            - 'coe'
           skip_capacity_check: false
           environment: 'production'
 
