Add podman module to ci deploy job
Change-Id: I6a8783df0230c030b091cb1907cf50d219f5f733

--- a/puppet.yaml
+++ b/puppet.yaml
@@ -1206,6 +1206,11 @@
                   branch-pattern: 'master'
                 - branch-compare-type: 'REG_EXP'
                   branch-pattern: 'nectar/.*'
+            - project-compare-type: 'PLAIN'
+              project-pattern: 'NeCTAR-RC/camptocamp-podman'
+              branches:
+                - branch-compare-type: 'PLAIN'
+                  branch-pattern: 'master'
           silent: false
           escape-quotes: true
 
