--- a/other.yaml
+++ b/other.yaml
@@ -490,6 +490,11 @@
          organisation: 'internal'
          ubuntu_release: 'focal'
          os_release: 'victoria'
+      - 'requirements-container-{ubuntu_release}-{os_release}':
+         access: 'nobody'
+         organisation: 'internal'
+         ubuntu_release: 'focal'
+         os_release: 'wallaby'
 
 - project:
     name: loci
