Fix container build jobs triggering test cloud upgrade
The 'publisher' method does not work with pipelines - 'publisher'
translates to 'Post-build Actions' that doesn't show up in Jenkins Web
UI when you are configuring a 'Pipeline' type job. It shows up in a
'Freestyle' type job.

Use the 'post' in Pipelines as documented[1]. Also, add a parameter
'GERRIT_PROJECT' to the deploy job as Jenkins doesn't fill that in if
triggered via a pipeline job.

[1]: https://www.jenkins.io/doc/book/pipeline/syntax/#post

Change-Id: I52a00b0bb989df8f916bd8928837eac8f165e58d

--- a/containers.yaml
+++ b/containers.yaml
@@ -370,11 +370,6 @@
     project-type: pipeline
     sandbox: true
 
-    publishers:
-      - trigger:
-          project: puppet-site-rctest-r10k-deploy-control-repo
-          threshold: SUCCESS
-
     git_credential: '2f00f9a5-00c3-42fe-82bf-cc787af1df8c'
 
     dsl: |
@@ -388,11 +383,7 @@
               script {{
                 if (currentBuild.upstreamBuilds.size() == 0) {{
                   build = selectRun(
-                    job: '{name}-container-{ubuntu_release}-{os_release}',
-                    selector: status('SUCCESSFUL'),
-                    filter: or([parameters("GERRIT_EVENT_TYPE=change-merged"), parameters("GERRIT_REFSPEC=refs/heads/nectar/{os_release}")]),
-                    verbose: true
-                  )
+                         )
                   copyArtifactSelector = specific(build.getId())
                 }}
                 copyArtifacts(
@@ -435,6 +426,14 @@
                   git config --local --unset credential.helper
               ''')
             }}
+          }}
+        }}
+        post {{
+          success {{
+            build (
+              job: 'puppet-site-rctest-r10k-deploy-control-repo',
+              parameters: [string(name: 'GERRIT_PROJECT', value: 'internal/puppet-site-rctest')]
+            )
           }}
         }}
       }}
